--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,3 +27,97 @@
   border-color: #614ad3;
   color: #ffffff;
 }
+
+/* modal form */
+
+#modal {
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.form-content {
+  background-color: #fefefe;
+  margin: 15% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; 
+}
+
+#add-book-form input[type=text], 
+#add-book-form input[type=number]{
+  box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	outline: none;
+	display: block;
+	width: 100%;
+	padding: 7px;
+	border: none;
+	border-bottom: 1px solid #e42c64;
+	background: transparent;
+	margin-bottom: 10px;
+	font: 16px Arial, Helvetica, sans-serif;
+	height: 45px;
+}
+
+#add-book-form input[type="submit"]{
+	-moz-box-shadow: inset 0px 1px 0px 0px #e42c64;
+	-webkit-box-shadow: inset 0px 1px 0px 0px #e42c64;
+	box-shadow: inset 0px 1px 0px 0px #e42c64;
+	background-color: #e42c64;
+	border: 1px solid #e42c64;
+	display: block;
+	cursor: pointer;
+	color: #FFFFFF;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 14px;
+	padding: 8px 18px;
+	text-decoration: none;
+  text-transform: uppercase;
+  margin: 0 auto;
+}
+
+.read-txt{
+  font: 16px Arial, Helvetica, sans-serif;
+  color: #8e8e8e;
+  margin-left: 10px;
+}
+
+.form-heading{
+  text-align: center;
+  margin: 20px;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  color: #e42c64;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.hidden{
+  display: none;
+}
+
+.show{
+  display: block;
+}
