--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,6 @@
+body{
+  font-family: Arial, Helvetica, sans-serif;
+}
 /* header  */
 
 .nav{
@@ -26,4 +29,61 @@
   border-radius: 15px;
   border-color: #614ad3;
   color: #ffffff;
+}
+
+.collection{
+  margin: 0 auto;
+  background: rgb(255, 240, 240);
+  width: 840px;
+  padding: 40px 20px;
+  font-size: 12px;
+  color: rgb(0, 0, 0);
+}
+
+.book{
+  height: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.head{
+  font-weight: bolder;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.pd{
+  height: 60px;
+  border-left: 1px solid rgb(255, 210, 210);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ico{
+  border: none;
+}
+
+.light{
+  background: rgb(218, 132, 132);
+  border-bottom: 1px solid rgb(218, 132, 132);
+  border-radius: 4px;
+}
+
+.light:hover{
+  background: rgb(255, 230, 230);
+  font-size: 14px;
+}
+
+.dark{
+  background: rgb(177, 60, 60);
+  border-radius: 4px;
+}
+
+
+.dark:hover{
+  background: rgb(92, 14, 14);
+  font-size: 14px;
+  color: #f2f2f2;
 }
